fixing some changes
