# routers/api/v1/auth.go
@@ -1,12 +1,12 @@
 package v1
 
 import (
+	"fmt"
 	"kusnandartoni/starter/pkg/app"
 	"kusnandartoni/starter/pkg/logging"
 	"kusnandartoni/starter/pkg/setting"
 	"kusnandartoni/starter/pkg/util"
 	"kusnandartoni/starter/services/svcmail"
-	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -14,37 +14,17 @@ import (
 
 // RegisterForm :
 type RegisterForm struct {
-	Username        string `json:"username,omitempty"`
-	Email           string `json:"email" valid:"Required"`
-	Password        string `json:"password" valid:"Required"`
-	FullName        string `json:"full_name,omitempty"`
-	FirstName       string `json:"first_name,omitempty"`
-	MidleName       string `json:"midle_name,omitempty"`
-	LastName        string `json:"last_name,omitempty"`
-	PhotoURL        string `json:"photo_url,omitempty"`
-	Gender          string `json:"gender,omitempty"`
-	Birthday        string `json:"birthday,omitempty"`
-	PhoneNumber     string `json:"phone_number,omitempty"`
-	Address         string `json:"address,omitempty"`
-	Industry        string `json:"industry,omitempty"`
-	Company         string `json:"company,omitempty"`
-	Occupation      string `json:"occupation,omitempty"`
-	ExperienceLevel string `json:"experience_level,omitempty"`
-	HighestDegree   string `json:"highest_degree,omitempty"`
-	University      string `json:"university,omitempty"`
-	Major           string `json:"major,omitempty"`
-	Verified        bool   `json:"verified,omitempty"`
-	UserRoles       string `json:"user_roles,omitempty"`
-	Expertise       string `json:"expertise,omitempty"`
-	Biography       string `json:"biography,omitempty"`
-	Institution     string `json:"institution,omitempty"`
+	Email    string `json:"email" valid:"Required"`
+	Password string `json:"password" valid:"Required"`
+	FullName string `json:"full_name,omitempty"`
+	PhotoURL string `json:"photo_url,omitempty"`
+	Verified bool   `json:"verified,omitempty"`
 }
 
 // Register :
 // @Summary Register a Member
 // @Tags Auth
 // @Produce json
-// @Param platform path string true "Platform"
 // @Param req body v1.RegisterForm true "req param #changes are possible to adjust the form of the registration form from forntend"
 // @Success 200 {object} app.Response
 // @Router /api/auth/register [post]
@@ -76,7 +56,7 @@ func Register(c *gin.Context) {
 
 	mailService := svcmail.Verify{
 		Email:      form.Email,
-		UserName:   fmt.Sprintf("%s %s", form.FirstName, form.LastName),
+		UserName:   fmt.Sprintf("%s", form.FullName),
 		VerifyLink: fmt.Sprintf("%s/api/auth/verify?token=%s", setting.AppSetting.PrefixURL, util.GetEmailToken(form.Email)),
 	}
 	err = mailService.Store()
@@ -98,7 +78,6 @@ type LoginForm struct {
 // @Summary Login to get auth
 // @Tags Auth
 // @Produce  json
-// @Param platform path string true "Platform"
 // @Param req body v1.LoginForm true "req param"
 // @Success 200 {object} app.Response
 // @Router /api/auth/login [post]
@@ -141,7 +120,6 @@ func Login(c *gin.Context) {
 // @Summary Verify email registration
 // @Tags Auth
 // @Produce  json
-// @Param platform path string true "Platform"
 // @Param token query string true "Token"
 // @Success 200 {object} app.Response
 // @Router /api/auth/verify [get]
@@ -163,7 +141,7 @@ func Verify(c *gin.Context) {
 		return
 	}
 
-	logger.Info(appG.Response(http.StatusOK, "OK", nil))
+	logger.Info(appG.Response(http.StatusOK, "Email berhasil diverivikasi", nil))
 }
 
 // ForgotForm :
@@ -175,7 +153,6 @@ type ForgotForm struct {
 // @Summary Forgot password
 // @Tags Auth
 // @Produce  json
-// @Param platform path string true "Platform"
 // @Param req body v1.ForgotForm true "req param"
 // @Success 200 {object} app.Response
 // @Router /api/auth/forgot [post]
@@ -214,7 +191,7 @@ func Forgot(c *gin.Context) {
 		return
 	}
 
-	logger.Info(appG.Response(http.StatusOK, "OK", form))
+	logger.Info(appG.Response(http.StatusOK, "Email lupa password akan segera dikirim", form))
 }
 
 // ResetForm :
@@ -227,7 +204,6 @@ type ResetForm struct {
 // @Summary Reset email registration
 // @Tags Auth
 // @Produce  json
-// @Param platform path string true "Platform"
 // @Param req body v1.ResetForm true "req param"
 // @Success 200 {object} app.Response
 // @Router /api/auth/reset [put]
